@@ -93,6 +93,7 @@ class Config(object):
         html_use_modindex = (True, 'html'),  # deprecated
         html_domain_indices = (True, 'html'),
         html_add_permalinks = (True, 'html'),
+        html_permalink_text = (u'\u00B6', 'html'),
         html_use_index = (True, 'html'),
         html_split_index = (False, 'html'),
         html_copy_source = (True, 'html'),
